# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  ast_builder.py  cli.py  gendiff.py  generate_diff.py  parser.py
gendiff/enum/: StateEnum.py
gendiff/formatters/: json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
